[tool.poetry]
name = "ftb-extract"
version = "1.1.0"
description = "Extract data from an FTB database to generate a static website"
authors = ["Simon Muller <samullers@gmail.com>"]
readme = "README.md"
keywords = ["genealogy", "family-tree", "json", "website"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Sociology :: Genealogy",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Text Processing :: Markup :: HTML",
]

[tool.poetry.dependencies]
python = "^3.8"
click = "~8.0.3"

[tool.poetry.dev-dependencies]
mypy = "^0.930"
